packages/rust/crates/xiuxian-wendao-studio/tests/snapshots/gateway/studio/repo_projected_page_family_context_endpoint_json.snap
---
source: packages/rust/crates/xiuxian-wendao-studio/tests/unit/gateway/studio/support.rs
assertion_line: 17
expression: value
---
{
  "center_page": {
    "doc_id": "repo:gateway-sync:doc:README.md",
    "doc_ids": [
      "repo:gateway-sync:doc:README.md",
      "repo:gateway-sync:doc:src/GatewaySyncPkg.jl#symbol-id:repo:gateway-sync:symbol:GatewaySyncPkg.solve",
      "repo:gateway-sync:doc:docs/solve.md"
    ],
    "example_ids": [
      "repo:gateway-sync:example:examples/solve_demo.jl"
    ],
    "format_hints": [
      "julia_docstring",
      "md"
    ],
    "keywords": [
      "README.md",
      "julia_docstring",
      "md",
      "repo:gateway-sync:doc:README.md",
      "solve_demo"
    ],
    "kind": "how_to",
    "module_ids": [
      "repo:gateway-sync:module:GatewaySyncPkg"
    ],
    "page_id": "repo:gateway-sync:projection:howto:example:repo:gateway-sync:example:examples/solve_demo.jl",
    "path": "README.md",
    "paths": [
      "README.md",
      "docs/solve.md",
      "examples/solve_demo.jl",
      "src/GatewaySyncPkg.jl#symbol-id:repo:gateway-sync:symbol:GatewaySyncPkg.solve"
    ],
    "repo_id": "gateway-sync",
    "sections": [
      {
        "body": "Projected how-to page for `solve_demo`.\nFormat hints:\n- `julia_docstring`\n- `md`\nSource paths:\n- `README.md`\n- `docs/solve.md`\n- `examples/solve_demo.jl`\n- `src/GatewaySyncPkg.jl#symbol-id:repo:gateway-sync:symbol:GatewaySyncPkg.solve`",
        "level": 1,
        "paths": [
          "README.md",
          "docs/solve.md",
          "examples/solve_demo.jl",
          "src/GatewaySyncPkg.jl#symbol-id:repo:gateway-sync:symbol:GatewaySyncPkg.solve"
        ],
        "section_id": "repo:gateway-sync:projection:howto:example:repo:gateway-sync:example:examples/solve_demo.jl#overview",
        "title": "Overview"
      },
      {
        "body": "Modules:\n- `GatewaySyncPkg` (src/GatewaySyncPkg.jl)\n\nSymbols:\n- `GatewaySyncPkg.solve` (src/GatewaySyncPkg.jl)",
        "level": 2,
        "paths": [
          "src/GatewaySyncPkg.jl"
        ],
        "section_id": "repo:gateway-sync:projection:howto:example:repo:gateway-sync:example:examples/solve_demo.jl#anchors",
        "title": "Anchors"
      },
      {
        "body": "Documentation:\n- `README.md` (README.md)\n- `solve` (docs/solve.md)\n- `solve` (src/GatewaySyncPkg.jl#symbol-id:repo:gateway-sync:symbol:GatewaySyncPkg.solve)",
        "level": 2,
        "paths": [
          "README.md",
          "docs/solve.md",
          "src/GatewaySyncPkg.jl#symbol-id:repo:gateway-sync:symbol:GatewaySyncPkg.solve"
        ],
        "section_id": "repo:gateway-sync:projection:howto:example:repo:gateway-sync:example:examples/solve_demo.jl#sources",
        "title": "Supporting Docs"
      },
      {
        "body": "Examples:\n- `solve_demo` (examples/solve_demo.jl)",
        "level": 2,
        "paths": [
          "examples/solve_demo.jl"
        ],
        "section_id": "repo:gateway-sync:projection:howto:example:repo:gateway-sync:example:examples/solve_demo.jl#examples",
        "title": "Examples"
      }
    ],
    "symbol_ids": [
      "repo:gateway-sync:symbol:GatewaySyncPkg.solve"
    ],
    "title": "solve_demo"
  },
  "families": [
    {
      "kind": "reference",
      "pages": [
        {
          "page": {
            "doc_id": "repo:gateway-sync:doc:README.md",
            "doc_ids": [
              "repo:gateway-sync:doc:README.md",
              "repo:gateway-sync:doc:src/GatewaySyncPkg.jl#symbol-id:repo:gateway-sync:symbol:GatewaySyncPkg.solve",
              "repo:gateway-sync:doc:docs/solve.md"
            ],
            "example_ids": [
              "repo:gateway-sync:example:examples/solve_demo.jl"
            ],
            "format_hints": [
              "julia_docstring",
              "md"
            ],
            "keywords": [
              "GatewaySyncPkg",
              "README.md",
              "julia_docstring",
              "md",
              "repo:gateway-sync:doc:README.md"
            ],
            "kind": "reference",
            "module_ids": [
              "repo:gateway-sync:module:GatewaySyncPkg"
            ],
            "page_id": "repo:gateway-sync:projection:reference:module:repo:gateway-sync:module:GatewaySyncPkg",
            "path": "README.md",
            "paths": [
              "README.md",
              "docs/solve.md",
              "examples/solve_demo.jl",
              "src/GatewaySyncPkg.jl",
              "src/GatewaySyncPkg.jl#symbol-id:repo:gateway-sync:symbol:GatewaySyncPkg.solve"
            ],
            "repo_id": "gateway-sync",
            "sections": [
              {
                "body": "Projected reference page for `GatewaySyncPkg`.\nFormat hints:\n- `julia_docstring`\n- `md`\nSource paths:\n- `README.md`\n- `docs/solve.md`\n- `examples/solve_demo.jl`\n- `src/GatewaySyncPkg.jl`\n- `src/GatewaySyncPkg.jl#symbol-id:repo:gateway-sync:symbol:GatewaySyncPkg.solve`",
                "level": 1,
                "paths": [
                  "README.md",
                  "docs/solve.md",
                  "examples/solve_demo.jl",
                  "src/GatewaySyncPkg.jl",
                  "src/GatewaySyncPkg.jl#symbol-id:repo:gateway-sync:symbol:GatewaySyncPkg.solve"
                ],
                "section_id": "repo:gateway-sync:projection:reference:module:repo:gateway-sync:module:GatewaySyncPkg#overview",
                "title": "Overview"
              },
              {
                "body": "Modules:\n- `GatewaySyncPkg` (src/GatewaySyncPkg.jl)",
                "level": 2,
                "paths": [
                  "src/GatewaySyncPkg.jl"
                ],
                "section_id": "repo:gateway-sync:projection:reference:module:repo:gateway-sync:module:GatewaySyncPkg#anchors",
                "title": "Anchors"
              },
              {
                "body": "Documentation:\n- `README.md` (README.md)\n- `solve` (docs/solve.md)\n- `solve` (src/GatewaySyncPkg.jl#symbol-id:repo:gateway-sync:symbol:GatewaySyncPkg.solve)",
                "level": 2,
                "paths": [
                  "README.md",
                  "docs/solve.md",
                  "src/GatewaySyncPkg.jl#symbol-id:repo:gateway-sync:symbol:GatewaySyncPkg.solve"
                ],
                "section_id": "repo:gateway-sync:projection:reference:module:repo:gateway-sync:module:GatewaySyncPkg#sources",
                "title": "Documentation"
              },
              {
                "body": "Examples:\n- `solve_demo` (examples/solve_demo.jl)",
                "level": 2,
                "paths": [
                  "examples/solve_demo.jl"
                ],
                "section_id": "repo:gateway-sync:projection:reference:module:repo:gateway-sync:module:GatewaySyncPkg#examples",
                "title": "Examples"
              }
            ],
            "symbol_ids": [],
            "title": "GatewaySyncPkg"
          },
          "shared_anchor_score": 5
        },
        {
          "page": {
            "doc_id": "repo:gateway-sync:doc:src/GatewaySyncPkg.jl#symbol-id:repo:gateway-sync:symbol:GatewaySyncPkg.solve",
            "doc_ids": [
              "repo:gateway-sync:doc:src/GatewaySyncPkg.jl#symbol-id:repo:gateway-sync:symbol:GatewaySyncPkg.solve",
              "repo:gateway-sync:doc:docs/solve.md"
            ],
            "example_ids": [
              "repo:gateway-sync:example:examples/solve_demo.jl"
            ],
            "format_hints": [
              "julia_docstring",
              "md"
            ],
            "keywords": [
              "GatewaySyncPkg.solve",
              "docs/solve.md",
              "julia_docstring",
              "md",
              "repo:gateway-sync:doc:src/GatewaySyncPkg.jl#symbol-id:repo:gateway-sync:symbol:GatewaySyncPkg.solve"
            ],
            "kind": "reference",
            "module_ids": [
              "repo:gateway-sync:module:GatewaySyncPkg"
            ],
            "page_id": "repo:gateway-sync:projection:reference:symbol:repo:gateway-sync:symbol:GatewaySyncPkg.solve",
            "path": "docs/solve.md",
            "paths": [
              "docs/solve.md",
              "examples/solve_demo.jl",
              "src/GatewaySyncPkg.jl",
              "src/GatewaySyncPkg.jl#symbol-id:repo:gateway-sync:symbol:GatewaySyncPkg.solve"
            ],
            "repo_id": "gateway-sync",
            "sections": [
              {
                "body": "Projected reference page for `GatewaySyncPkg.solve`.\nFormat hints:\n- `julia_docstring`\n- `md`\nSource paths:\n- `docs/solve.md`\n- `examples/solve_demo.jl`\n- `src/GatewaySyncPkg.jl`\n- `src/GatewaySyncPkg.jl#symbol-id:repo:gateway-sync:symbol:GatewaySyncPkg.solve`",
                "level": 1,
                "paths": [
                  "docs/solve.md",
                  "examples/solve_demo.jl",
                  "src/GatewaySyncPkg.jl",
                  "src/GatewaySyncPkg.jl#symbol-id:repo:gateway-sync:symbol:GatewaySyncPkg.solve"
                ],
                "section_id": "repo:gateway-sync:projection:reference:symbol:repo:gateway-sync:symbol:GatewaySyncPkg.solve#overview",
                "title": "Overview"
              },
              {
                "body": "Modules:\n- `GatewaySyncPkg` (src/GatewaySyncPkg.jl)\n\nSymbols:\n- `GatewaySyncPkg.solve` (src/GatewaySyncPkg.jl)",
                "level": 2,
                "paths": [
                  "src/GatewaySyncPkg.jl"
                ],
                "section_id": "repo:gateway-sync:projection:reference:symbol:repo:gateway-sync:symbol:GatewaySyncPkg.solve#anchors",
                "title": "Anchors"
              },
              {
                "body": "Documentation:\n- `solve` (docs/solve.md)\n- `solve` (src/GatewaySyncPkg.jl#symbol-id:repo:gateway-sync:symbol:GatewaySyncPkg.solve)",
                "level": 2,
                "paths": [
                  "docs/solve.md",
                  "src/GatewaySyncPkg.jl#symbol-id:repo:gateway-sync:symbol:GatewaySyncPkg.solve"
                ],
                "section_id": "repo:gateway-sync:projection:reference:symbol:repo:gateway-sync:symbol:GatewaySyncPkg.solve#sources",
                "title": "Documentation"
              },
              {
                "body": "Examples:\n- `solve_demo` (examples/solve_demo.jl)",
                "level": 2,
                "paths": [
                  "examples/solve_demo.jl"
                ],
                "section_id": "repo:gateway-sync:projection:reference:symbol:repo:gateway-sync:symbol:GatewaySyncPkg.solve#examples",
                "title": "Examples"
              }
            ],
            "symbol_ids": [
              "repo:gateway-sync:symbol:GatewaySyncPkg.solve"
            ],
            "title": "GatewaySyncPkg.solve"
          },
          "shared_anchor_score": 5
        }
      ]
    },
    {
      "kind": "explanation",
      "pages": [
        {
          "page": {
            "doc_id": "repo:gateway-sync:doc:README.md",
            "doc_ids": [
              "repo:gateway-sync:doc:README.md"
            ],
            "example_ids": [
              "repo:gateway-sync:example:examples/solve_demo.jl"
            ],
            "format_hints": [
              "md"
            ],
            "keywords": [
              "README.md",
              "md",
              "repo:gateway-sync:doc:README.md"
            ],
            "kind": "explanation",
            "module_ids": [
              "repo:gateway-sync:module:GatewaySyncPkg"
            ],
            "page_id": "repo:gateway-sync:projection:explanation:doc:repo:gateway-sync:doc:README.md",
            "path": "README.md",
            "paths": [
              "README.md",
              "examples/solve_demo.jl"
            ],
            "repo_id": "gateway-sync",
            "sections": [
              {
                "body": "Projected explanation page for `README.md`.\nFormat hints:\n- `md`\nSource paths:\n- `README.md`\n- `examples/solve_demo.jl`",
                "level": 1,
                "paths": [
                  "README.md",
                  "examples/solve_demo.jl"
                ],
                "section_id": "repo:gateway-sync:projection:explanation:doc:repo:gateway-sync:doc:README.md#overview",
                "title": "Overview"
              },
              {
                "body": "Modules:\n- `GatewaySyncPkg` (src/GatewaySyncPkg.jl)",
                "level": 2,
                "paths": [
                  "src/GatewaySyncPkg.jl"
                ],
                "section_id": "repo:gateway-sync:projection:explanation:doc:repo:gateway-sync:doc:README.md#anchors",
                "title": "Anchors"
              },
              {
                "body": "Documentation:\n- `README.md` (README.md)",
                "level": 2,
                "paths": [
                  "README.md"
                ],
                "section_id": "repo:gateway-sync:projection:explanation:doc:repo:gateway-sync:doc:README.md#sources",
                "title": "Sources"
              },
              {
                "body": "Examples:\n- `solve_demo` (examples/solve_demo.jl)",
                "level": 2,
                "paths": [
                  "examples/solve_demo.jl"
                ],
                "section_id": "repo:gateway-sync:projection:explanation:doc:repo:gateway-sync:doc:README.md#examples",
                "title": "Examples"
              }
            ],
            "symbol_ids": [],
            "title": "README.md"
          },
          "shared_anchor_score": 3
        }
      ]
    }
  ],
  "repo_id": "gateway-sync"
}
