packages/rust/crates/xiuxian-wendao-studio/tests/snapshots/gateway/studio/repo_projected_page_index_tree_search_endpoint_json.snap
---
source: packages/rust/crates/xiuxian-wendao-studio/tests/unit/gateway/studio/support.rs
assertion_line: 17
expression: value
---
{
  "hits": [
    {
      "doc_id": "reference/gatewaysyncpkg-fb1701217f99",
      "line_range": [
        23,
        29
      ],
      "node_id": "reference/gatewaysyncpkg-fb1701217f99#anchors",
      "node_title": "Anchors",
      "page_id": "repo:gateway-sync:projection:reference:module:repo:gateway-sync:module:GatewaySyncPkg",
      "page_kind": "reference",
      "page_title": "GatewaySyncPkg",
      "path": "reference/gatewaysyncpkg-fb1701217f99.md",
      "repo_id": "gateway-sync",
      "structural_path": [
        "Overview",
        "Anchors"
      ],
      "text": ":ID: anchors\n:PATHS: src/GatewaySyncPkg.jl\n\nModules:\n- `GatewaySyncPkg` (src/GatewaySyncPkg.jl)"
    },
    {
      "doc_id": "reference/gatewaysyncpkg-solve-426791875262",
      "line_range": [
        22,
        31
      ],
      "node_id": "reference/gatewaysyncpkg-solve-426791875262#anchors",
      "node_title": "Anchors",
      "page_id": "repo:gateway-sync:projection:reference:symbol:repo:gateway-sync:symbol:GatewaySyncPkg.solve",
      "page_kind": "reference",
      "page_title": "GatewaySyncPkg.solve",
      "path": "reference/gatewaysyncpkg-solve-426791875262.md",
      "repo_id": "gateway-sync",
      "structural_path": [
        "Overview",
        "Anchors"
      ],
      "text": ":ID: anchors\n:PATHS: src/GatewaySyncPkg.jl\n\nModules:\n- `GatewaySyncPkg` (src/GatewaySyncPkg.jl)\n\nSymbols:\n- `GatewaySyncPkg.solve` (src/GatewaySyncPkg.jl)"
    },
    {
      "doc_id": "reference/solve-69592caeddee",
      "line_range": [
        19,
        25
      ],
      "node_id": "reference/solve-69592caeddee#anchors",
      "node_title": "Anchors",
      "page_id": "repo:gateway-sync:projection:reference:doc:repo:gateway-sync:doc:docs/solve.md",
      "page_kind": "reference",
      "page_title": "solve",
      "path": "reference/solve-69592caeddee.md",
      "repo_id": "gateway-sync",
      "structural_path": [
        "Overview",
        "Anchors"
      ],
      "text": ":ID: anchors\n:PATHS: src/GatewaySyncPkg.jl\n\nSymbols:\n- `GatewaySyncPkg.solve` (src/GatewaySyncPkg.jl)"
    },
    {
      "doc_id": "reference/solve-ff3f3e8134a2",
      "line_range": [
        19,
        25
      ],
      "node_id": "reference/solve-ff3f3e8134a2#anchors",
      "node_title": "Anchors",
      "page_id": "repo:gateway-sync:projection:reference:doc:repo:gateway-sync:doc:src/GatewaySyncPkg.jl#symbol-id:repo:gateway-sync:symbol:GatewaySyncPkg.solve",
      "page_kind": "reference",
      "page_title": "solve",
      "path": "reference/solve-ff3f3e8134a2.md",
      "repo_id": "gateway-sync",
      "structural_path": [
        "Overview",
        "Anchors"
      ],
      "text": ":ID: anchors\n:PATHS: src/GatewaySyncPkg.jl\n\nSymbols:\n- `GatewaySyncPkg.solve` (src/GatewaySyncPkg.jl)"
    }
  ],
  "repo_id": "gateway-sync"
}
