packages/rust/crates/xiuxian-wendao-studio/tests/snapshots/gateway/studio/repo_projected_page_not_found_error.snap
---
source: packages/rust/crates/xiuxian-wendao-studio/tests/unit/gateway/studio/support.rs
expression: value
---
{
  "code": "NOT_FOUND",
  "message": "repo `gateway-sync` does not contain projected page `repo:gateway-sync:projection:reference:doc:repo:gateway-sync:doc:docs/missing.md`"
}
